--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "@neondatabase/serverless": "^1.0.2",
+    "dotenv-flow": "^4.1.0",
     "next": "14.1.4",
-    "better-sqlite3": "^9.4.3"
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
